--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
+# dependencies
 /node_modules
-/coverage
-/build
+
+# production
+# /build
+src/*
+public/*
+build/static/css/*.map
+build/static/js/*.map
+
 /.vscode
 package-lock.json
 
+# testing
+/coverage
+
+# misc
 .DS_Store
 .env
 .env.local
