--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.26.1",
     "dayjs": "^1.8.31",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "htmr": "^0.8.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
